@startuml

class User {
    - id: int
    - userName: str
    - hashPassword: int
    - cardNumber: int
    - bankAccount: BankAccount
    - tickets: list

    + get_id(): int
    + set_id(id: int): None
    + get_user_name(): str
    + set_user_name(userName: str): None
    + get_hash_password(): int
    + set_hash_password(hashPassword: int): None
    + get_card_number(): int
    + set_card_number(cardNumber: int): None
    + get_bank_account(): BankAccount
    + set_bank_account(bankAccount: BankAccount): None
    + add_ticket(ticket: Ticket): None
    + get_tickets(): list
}

class iCustomer {
    + purchase_ticket(ticket: Ticket): None
}

class Customer {
    + purchase_ticket(ticket: Ticket): None
}

class Ticket {
    - price: float
    - id: int
    - place: Place
    - dateTime: DateTime
    - is_valid: bool
    - cardNumber: int
    - interest: str
    - carrier: Carrier

    + get_price(): float
    + get_id(): int
    + get_place(): Place
    + get_date_time(): DateTime
    + is_valid(): bool
    + get_card_number(): int
    + get_interest(): str
    + get_carrier(): Carrier
}

class BankAccount {
    - card: int
    - balance: int

    + get_card(): int
    + get_balance(): int
}

class Place {
    - name: str
    - location

    + get_name()
    + get_location()
}

class DateTime {
    - date
    - time
    - ticket: Ticket

    + get_date()
    + get_time()
    + set_ticket(ticket: Ticket): None
    + get_ticket(): Ticket
}

class Carrier {
    - id: int
    - places: list
    - cardNumber: int

    + get_id(): int
    + get_places(): list
    + get_card_number(): int
}

User "1" --> "1..*" Ticket
User <|--- Customer
Customer ..|> iCustomer
Ticket "1" --> "1" Place
Ticket "1" --> "1" DateTime
Ticket --> Carrier
User "1" --> "1" BankAccount
Place "1" --> "1..*" Carrier

@enduml
